# rainbot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Caddyfile  Dockerfile  Dockerfile.web  PLAN.md  PRD.md  PROMPT.md  README.md  WEBAPP_PLAN.md  docker-compose.yml  fly.toml  main.py  pyproject.toml  ralph.py  requirements.txt
.github/workflows/: check-status.yml  deploy-fly.yml  deploy.yml  healthcheck.yml  refresh-catalog.yml
.smithers/: agents.ts  package.json
.smithers/components/: CommandProbe.tsx  FeatureEnum.tsx  ForEachFeature.tsx  GrillMe.tsx  Review.tsx  WriteAPrd.tsx
.smithers/prompts/: ask-user-instructions.mdx  implement.mdx  plan.mdx  research.mdx  review.mdx  validate.mdx  write-a-prd.mdx
.smithers/workflows/: audit.tsx  debug.tsx  feature-enum.tsx  implement.tsx  improve-test-coverage.tsx  kanban.tsx  plan.tsx  ralph.tsx  research-plan-implement.tsx  research.tsx  review.tsx  test-first.tsx  ticket-create.tsx  ticket-implement.tsx  ticket-kanban.tsx  tickets-create.tsx  write-a-prd.tsx
.trunk/: trunk.yaml
data/: catalog.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
scripts/: capture_network.py  debug_booking.py  debug_captcha_fields.py  debug_precheck.py  dev.py  inspect_captcha_page.py  inspect_token_fields.py  run_booking_e2e.py  scrape_catalog.py  test_booking.py  test_captcha.py  test_captcha_extract.py  test_captcha_pause.py  test_login.py  test_search.py
src/: __init__.py  booking_service.py  cli.py  spreadsheet.py
src/api/: __init__.py  auth.py  deps.py  main.py
src/config/: __init__.py  settings.py
src/database/: __init__.py  connection.py  schema.sql
src/models/: __init__.py  booking.py  booking_request.py  user.py
src/paris_tennis_api/: __init__.py  availability.py  captcha.py  catalog_store.py  cli.py  client.py  config.py  exceptions.py  models.py  parsers.py
src/schedulers/: __init__.py  cron_jobs.py
src/services/: __init__.py  booking_history.py  bookings_db.py  captcha_solver.py  google_sheets.py  locks_db.py  logs_db.py  notification.py  notifications_db.py  paris_tennis.py  requests_db.py
src/utils/: __init__.py  browser.py  parsing.py  timezone.py
tests/: __init__.py  test_booking_history.py  test_browser.py  test_captcha_solver.py  test_cli.py  test_cron_jobs.py  test_google_sheets.py  test_live_paris_tennis.py  test_main.py  test_models.py  test_notification.py  test_paris_tennis.py  test_structure.py  test_timezone.py
tests/e2e/: test_captcha_flow.py  test_live_booking_flow.py  test_webapp_flow.py
tests/unit/: test_captcha_solver.py  test_cli.py  test_cli_additional.py  test_client.py  test_config_and_webapp_settings.py  test_module_entrypoints.py  test_parsers.py  test_parsers_additional.py  test_ticket_parsing.py  test_validation.py  test_webapp_main_helpers.py  test_webapp_main_routes.py  test_webapp_scheduler_retry.py  test_webapp_server.py  test_webapp_sessions.py  test_webapp_store.py  (+1 more)
web/: index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  (+2 more)
(+55 files in other folders)
